# agent-harness-langgraph

./: .gitignore  AGENTS.md  PLAN.md  PROJECT_SUMMARY.md  README.md  main.py  project_decisions.md  pyproject.toml  run.sh  tests.txt
agent/: graph.py  logging.py  parsers.py  patching.py  state.py  tools.py
agent/config/: prompts.py
agent/llm/: client.py
agent/nodes/: coder.py  critic.py  executor.py  patcher.py  planner.py
notes/: executor_validations.md  notes.md  todo.md
scripts/: smoke_llm.py  test_prompt.py
tests/: smoke_test_agent.py  smoke_test_harness.py  test_nodes.py
tests/live/: test_ollama.py
tests/smoke/: harness.py  test_agent.py
