[project]
name = "agent-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "pytest>=9.1.1",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: requires a reachable local Ollama server and configured model",
]
